syntax = "proto3";

package protocol;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./core_proto;core_proto";

service Protocol {
  rpc SendTransaction(SendTransactionRequest) returns (TransactionResponse) {
    option (google.api.http) = {
      post: "/core/grpc/transaction"
      body: "transaction"
    };
  }
  rpc ForwardTransaction(ForwardTransactionRequest) returns (ForwardTransactionResponse) {
    option (google.api.http) = {
      post: "/core/grpc/transaction/forward"
      body: "transaction"
    };
  }
  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse) {
    option (google.api.http) = {get: "/core/grpc/transaction/{txhash}"};
  }
  rpc GetBlock(GetBlockRequest) returns (BlockResponse) {
    option (google.api.http) = {get: "/core/grpc/block/{height}"};
  }
  rpc GetNodeInfo(GetNodeInfoRequest) returns (NodeInfoResponse) {
    option (google.api.http) = {get: "/core/grpc/node_info"};
  }
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {get: "/core/grpc/ping"};
  }
}

message SignedTransaction {
  string signature = 1;
  string request_id = 2;
  oneof transaction {
    TrackPlays plays = 1000;
    ValidatorRegistration validator_registration = 1001;
    SlaRollup sla_rollup = 1002;
    ManageEntityLegacy manage_entity = 1003;
  }
}

message SendTransactionRequest {
  SignedTransaction transaction = 1;
}

message ForwardTransactionRequest {
  string signature = 1;
  SignedTransaction transaction = 2;
}

message GetTransactionRequest {
  string txhash = 1;
}

message TransactionResponse {
  string txhash = 1;
  SignedTransaction transaction = 2;
}

message ForwardTransactionResponse {}

message GetBlockRequest {
  int64 height = 1;
}

message BlockResponse {
  string blockhash = 1;
  string chainid = 2;
  string proposer = 3;
  int64 height = 4;
  repeated SignedTransaction transactions = 5;
  int64 current_height = 6;
}

message GetNodeInfoRequest {}

message NodeInfoResponse {
  string chainid = 1;
  bool synced = 2;
  string comet_address = 3;
  string eth_address = 4;
  int64 current_height = 5;
}

message TrackPlays {
  repeated TrackPlay plays = 1;
}

message ValidatorRegistration {
  string endpoint = 1;
  string comet_address = 2;
  string eth_block = 3;
  string node_type = 4;
  string sp_id = 5;
  bytes pub_key = 6;
  int64 power = 7;
}

message TrackPlay {
  string user_id = 1;
  string track_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  string signature = 4;
  string city = 5;
  string region = 6;
  string country = 7;
}

message PingRequest {}

message PingResponse {
  string message = 1;
}

message SlaRollup {
  google.protobuf.Timestamp timestamp = 1;
  int64 block_start = 2;
  int64 block_end = 3;
  repeated SlaNodeReport reports = 4;
}

message SlaNodeReport {
  string address = 1;
  int32 num_blocks_proposed = 2;
}

message ManageEntityLegacy {
  int64 user_id = 1;
  string entity_type = 2;
  int64 entity_id = 3;
  string action = 4;
  string metadata = 5;
  string signature = 6;
}
